--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,15 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="welcome_to_quot_kanji_identifier_quot_enter_your_name_to_start_playing">Welcome to \"Kanji identifier\". Enter your name to start playing</string>
-    <string name="name">Name</string>
     <string name="start">Start</string>
+    <string name="name">Name</string>
+    <string name="bienvenido">"Bienvenido, "</string>
+    <string name="dream_kanji">dream kanji</string>
+    <string name="love">Love</string>
+    <string name="sadness">Sadness</string>
+    <string name="dream">Dream</string>
+    <string name="strength">Strength</string>
+    <string name="which_of_the_following_concepts_represents_this_kanji">Which of the following concepts represents this kanji?</string>
+    <string name="send">Send</string>
+    <string name="kanji">kanji</string>
 </resources>
