--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,17 +1,22 @@
 <resources>
-    <string name="app_name">Navigation example</string>
+    <string name="app_name" translatable="false">Navigation example</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="welcome_to_quot_kanji_identifier_quot_enter_your_name_to_start_playing">Welcome to \"Kanji identifier\". Enter your name to start playing</string>
     <string name="start">Start</string>
     <string name="name">Name</string>
     <string name="bienvenido">"Bienvenido, "</string>
-    <string name="dream_kanji">dream kanji</string>
+    <string name="dream_kanji" translatable="false">dream kanji</string>
     <string name="love">Love</string>
     <string name="sadness">Sadness</string>
     <string name="dream">Dream</string>
     <string name="strength">Strength</string>
     <string name="which_of_the_following_concepts_represents_this_kanji">Which of the following concepts represents this kanji?</string>
     <string name="send">Send</string>
-    <string name="kanji">kanji</string>
+    <string name="kanji" translatable="false">kanji</string>
+    <string name="congratulations">"Congratulations, "</string>
+    <string name="you_are_a_kanji_expert">. You are a kanji master!</string>
+    <string name="that_is_not_correct">"Sorry, that is incorrect, "</string>
+    <string name="do_it_again">. Try again!</string>
+    <string name="try_again">Try again</string>
 </resources>
