Ejercicio individual 4. - Se ordena el diseño

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name" translatable="false">Navigation example</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
-    <string name="welcome_to_quot_kanji_identifier_quot_enter_your_name_to_start_playing">Welcome to \"Kanji identifier\". Enter your name to start playing</string>
+    <string name="welcome_to_quot_kanji_identifier_quot_enter_your_name_to_start_playing">Welcome to \"Kanji master\". Enter your name to start playing.</string>
     <string name="start">Start</string>
     <string name="name">Name</string>
     <string name="bienvenido">"Bienvenido, "</string>
