--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="that_is_not_correct">"Sorry, that is incorrect, "</string>
     <string name="do_it_again">. Try again!</string>
     <string name="try_again">Try again</string>
+    <string name="debes_escoger_una_respuesta">Debes escoger una respuesta.</string>
 </resources>
